--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     </div>
 
     <div class="controls">
-        <button class="start buttons">Start</button>
+        <button class="start buttons" onclick="startCounting()">Start</button>
         <button class="stop buttons">Stop</button>
         <button class="clear buttons">Clear</button>
     </div>
+
+
+    <div id='seconds-counter'> </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
