--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <div class="controls">
         <button class="start buttons" onclick="startCounting()">Start</button>
-        <button class="stop buttons">Stop</button>
-        <button class="clear buttons">Clear</button>
+        <button class="stop buttons" onclick="stopCounting()">Stop</button>
+        <button class="clear buttons" onclick="clearCounting()">Clear</button>
     </div>
 
 
